Remove some 7.0 scripts, conditional deprecation check when building, continue to do all deprecation checks